[gd_scene load_steps=33 format=3 uid="uid://cdyetyvyljpk"]

[ext_resource type="Script" uid="uid://bgu1siu503xp7" path="res://Scripts/baddie_violet.gd" id="1_tdr17"]
[ext_resource type="Texture2D" uid="uid://dd1bx8j5cmldn" path="res://Assets/Atk_box.png" id="2_tdr17"]
[ext_resource type="Texture2D" uid="uid://mtkocsye11" path="res://Assets/atkviolet1.png" id="3_hrld3"]
[ext_resource type="Texture2D" uid="uid://cdbuaun1apy66" path="res://Assets/atkviolet2.png" id="4_6y8ve"]
[ext_resource type="Texture2D" uid="uid://cn8cnoa3w23q3" path="res://Assets/atkviolet3.png" id="5_oaorr"]
[ext_resource type="Texture2D" uid="uid://5tt7ykwu38v2" path="res://Assets/atkviolet4.png" id="6_smshv"]
[ext_resource type="Texture2D" uid="uid://djida5j74gqf2" path="res://Assets/atkviolet5.png" id="7_3m65n"]
[ext_resource type="Texture2D" uid="uid://5mw2oh0wg3eg" path="res://Assets/atkviolet6.png" id="8_smshv"]
[ext_resource type="Texture2D" uid="uid://dgxr1cduxeu1h" path="res://Assets/atkviolet7.png" id="9_3m65n"]
[ext_resource type="Texture2D" uid="uid://cu17fvv5puhmb" path="res://Assets/perso_chroma_requiem (55) copie 5.png" id="10_3m65n"]
[ext_resource type="Texture2D" uid="uid://dwbpg8txbcnps" path="res://Assets/atkviolet8.png" id="10_74vap"]
[ext_resource type="Texture2D" uid="uid://smndfb2cdge1" path="res://Assets/atkviolet9.png" id="11_3m65n"]
[ext_resource type="Texture2D" uid="uid://coyl2grlsbd0w" path="res://Assets/atkviolet10.png" id="12_c05tr"]
[ext_resource type="Texture2D" uid="uid://b7x3uhxk3o1ak" path="res://Assets/atkviolet11.png" id="13_2erx3"]
[ext_resource type="Texture2D" uid="uid://cg4o3gc4xxtdp" path="res://Assets/atkviolet12.png" id="14_b80hv"]
[ext_resource type="Texture2D" uid="uid://y61qyuuvodyx" path="res://Assets/atkviolet13.png" id="15_rb8yo"]
[ext_resource type="Texture2D" uid="uid://u6wf8jeeahp0" path="res://Assets/atkviolet14.png" id="16_b80hv"]
[ext_resource type="Texture2D" uid="uid://cjobefh7djvve" path="res://Assets/jumpviolet2.png" id="16_k0suj"]
[ext_resource type="Texture2D" uid="uid://dxnfpu0f3hdo7" path="res://Assets/violet1.png" id="17_c05tr"]
[ext_resource type="Texture2D" uid="uid://dnc4iy0rctj1x" path="res://Assets/jumpviolet3.png" id="17_p5wa5"]
[ext_resource type="Texture2D" uid="uid://c28l7ib5ngq1h" path="res://Assets/atkviolet15.png" id="17_rb8yo"]
[ext_resource type="Texture2D" uid="uid://ddq8y04p2fef8" path="res://Assets/violet2.png" id="18_2erx3"]
[ext_resource type="Texture2D" uid="uid://br85svu8rqo6u" path="res://Assets/violetL1.png" id="18_b80hv"]
[ext_resource type="Texture2D" uid="uid://d0dc3qnflxojv" path="res://Assets/violet3.png" id="19_b80hv"]
[ext_resource type="Texture2D" uid="uid://cpvgi1506xv0j" path="res://Assets/violetL2.png" id="19_rb8yo"]
[ext_resource type="Texture2D" uid="uid://dw3bn2br14j5c" path="res://Assets/violetL3.png" id="20_hgx7o"]
[ext_resource type="Texture2D" uid="uid://dtcb60c5kje30" path="res://Assets/jumpviolet1.png" id="20_srjvs"]
[ext_resource type="AudioStream" uid="uid://cglm0lleqi0e" path="res://SFX/violet.mp3" id="22_74vap"]
[ext_resource type="Texture2D" uid="uid://bm54uojhc5paw" path="res://Assets/RRviolet.png" id="29_2erx3"]
[ext_resource type="Texture2D" uid="uid://c1ga6fxgdlolf" path="res://Assets/violetRR2.png" id="29_b80hv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xh4dr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tdr17")
}],
"loop": true,
"name": &"atk1_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hrld3")
}, {
"duration": 1.0,
"texture": ExtResource("4_6y8ve")
}, {
"duration": 1.0,
"texture": ExtResource("5_oaorr")
}, {
"duration": 1.0,
"texture": ExtResource("6_smshv")
}, {
"duration": 1.0,
"texture": ExtResource("7_3m65n")
}, {
"duration": 1.0,
"texture": ExtResource("8_smshv")
}, {
"duration": 1.0,
"texture": ExtResource("9_3m65n")
}],
"loop": true,
"name": &"atk1_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_3m65n")
}, {
"duration": 1.0,
"texture": ExtResource("8_smshv")
}, {
"duration": 1.0,
"texture": ExtResource("7_3m65n")
}, {
"duration": 1.0,
"texture": ExtResource("6_smshv")
}, {
"duration": 1.0,
"texture": ExtResource("5_oaorr")
}, {
"duration": 1.0,
"texture": ExtResource("4_6y8ve")
}, {
"duration": 1.0,
"texture": ExtResource("3_hrld3")
}],
"loop": true,
"name": &"atk_demode",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_74vap")
}, {
"duration": 1.0,
"texture": ExtResource("11_3m65n")
}, {
"duration": 1.0,
"texture": ExtResource("12_c05tr")
}, {
"duration": 1.0,
"texture": ExtResource("13_2erx3")
}, {
"duration": 1.0,
"texture": ExtResource("14_b80hv")
}, {
"duration": 1.0,
"texture": ExtResource("15_rb8yo")
}, {
"duration": 1.0,
"texture": ExtResource("16_b80hv")
}, {
"duration": 1.0,
"texture": ExtResource("17_rb8yo")
}],
"loop": true,
"name": &"atk_stay",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_b80hv")
}, {
"duration": 1.0,
"texture": ExtResource("19_rb8yo")
}, {
"duration": 1.0,
"texture": ExtResource("20_hgx7o")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_c05tr")
}, {
"duration": 1.0,
"texture": ExtResource("18_2erx3")
}, {
"duration": 1.0,
"texture": ExtResource("19_b80hv")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_k0suj")
}, {
"duration": 1.0,
"texture": ExtResource("17_p5wa5")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_srjvs")
}],
"loop": true,
"name": &"prejump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_3m65n")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_2erx3")
}, {
"duration": 1.0,
"texture": ExtResource("29_b80hv")
}],
"loop": true,
"name": &"run_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wpk7j"]
size = Vector2(60, 113)

[node name="characterBody2D" type="CharacterBody2D"]
position = Vector2(106, 151)
script = ExtResource("1_tdr17")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(938, -516)
scale = Vector2(2.45023, 2.39583)
sprite_frames = SubResource("SpriteFrames_xh4dr")
animation = &"run_right"
frame_progress = 0.14687997
offset = Vector2(-387.769, 192.548)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, -42)
shape = SubResource("RectangleShape2D_wpk7j")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.33
one_shot = true

[node name="ModeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DemodeTimer" type="Timer" parent="."]
wait_time = 2.32
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_74vap")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ModeTimer" to="." method="_on_mode_timer_timeout"]
[connection signal="timeout" from="DemodeTimer" to="." method="_on_demode_timer_timeout"]
